--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,46 +2,49 @@ name: Build and Package CalculatorApp
 
 on:
   push:
-    branches: [ main ]
+    branches: [ main, add-logging ]
   pull_request:
     branches: [ main ]
 
 jobs:
   build:
-
     runs-on: windows-latest
 
     steps:
-    - name: Checkout repo
-      uses: actions/checkout@v3
+      # Step 1: Checkout repository
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-    - name: Setup .NET 8 SDK
-      uses: actions/setup-dotnet@v3
-      with:
-        dotnet-version: '8.0.x'
+      # Step 2: Setup .NET SDK
+      - name: Setup .NET
+        uses: actions/setup-dotnet@v4
+        with:
+          dotnet-version: '8.0.x'
 
-    - name: Restore dependencies
-      run: dotnet restore CalculatorApp.sln
+      # Step 3: Restore dependencies
+      - name: Restore dependencies
+        run: dotnet restore
 
-    - name: Build Solution
-      run: dotnet build CalculatorApp.sln -c Release --no-restore
+      # Step 4: Build project in Release mode
+      - name: Build project
+        run: dotnet build --configuration Release --no-restore
 
-    - name: Run Unit Tests
-      run: dotnet test CalculatorApp.sln -c Release --no-build
+      # Step 5: Run tests (if a test project exists)
+      - name: Run tests
+        run: |
+          if (Test-Path "CalculatorApp.Tests") {
+            dotnet test --no-build --verbosity normal
+          } else {
+            echo "No test project found, skipping tests."
+          }
 
-    - name: Install WiX Toolset
-      run: |
-        choco install wixtoolset --version=3.14.1 -y
-        refreshenv
+      # Step 6: Install WiX Toolset
+      - name: Install WiX Toolset
+        run: |
+          choco install wixtoolset --version=3.14.0 --no-progress -y
 
-    - name: Build MSI Installer
-      working-directory: Installer
-      run: |
-        candle.exe Product.wxs
-        light.exe Product.wixobj -o CalculatorApp.msi
-
-    - name: Upload MSI Artifact
-      uses: actions/upload-artifact@v3
-      with:
-        name: CalculatorApp-MSI
-        path: Installer/CalculatorApp.msi
+      # Step 7: Build MSI Installer
+      - name: Build MSI Installer
+        run: |
+          cd Installer
+          candle.exe Product.wxs -o Product.wixobj
